--- a/app/globals.css
+++ b/app/globals.css
@@ -45,6 +45,8 @@
   --radius-2xl: calc(var(--radius) + 8px);
   --radius-3xl: calc(var(--radius) + 12px);
   --radius-4xl: calc(var(--radius) + 16px);
+
+  --font-sprat: var(--font-sprat);
 }
 
 :root {
